name:                flock-pieces-functor-constraint
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/michaeljklein/flock-pieces-functor-constraint#readme
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Data.Functor.Constraint
                     , Data.Functor.Constraint.Const
                     , Data.Functor.Constraint.Jop
                     , Data.Functor.Constraint.Wrap
  build-depends:       base >= 4.7 && < 5
  default-language:    Haskell2010

executable flock-pieces-functor-constraint-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , flock-pieces-functor-constraint
  default-language:    Haskell2010

test-suite flock-pieces-functor-constraint-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , flock-pieces-functor-constraint
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/flock-pieces-functor-constraint
